--- a/MC.html
+++ b/MC.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type = "text/css" href = "MC.css">
     <title>Minecraft Stuff</title>
 </head>
 <body>
-    
+    <a id = "MYLE" href = "">
+        <button id = "MYLE" class = "mc">Make Your Life Easier V1</button>
+    </a>
+    <a id = "MYLEINFO" href = "">
+        <button id = "MYLEINFO" class = "mc">Datapack</button>
+    </a>
+    <a id = "MYLEYT" href = "">
+        <button id = "MYLEYT" class = "mc">YT VIdeo</button>
+    </a>
 </body>
 </html>
