--- a/MC.html
+++ b/MC.html
@@ -7,14 +7,15 @@
     <title>Minecraft Stuff</title>
 </head>
 <body>
-    <a id = "MYLE" href = "">
-        <button id = "MYLE" class = "mc">Make Your Life Easier V1</button>
+    <a id = "MYLE" href = "MakeYourLifeEasier.zip">
+        <button id = "MYLE" class = "mc"  download>Make Your Life Easier V1</button>
     </a>
     <a id = "MYLEINFO" href = "">
         <button id = "MYLEINFO" class = "mc">Datapack</button>
     </a>
-    <a id = "MYLEYT" href = "">
+    <a id = "MYLEYT" href = "https://youtu.be/R5N45D-blys">
         <button id = "MYLEYT" class = "mc">YT VIdeo</button>
     </a>
+    
 </body>
 </html>
