--- a/MC.html
+++ b/MC.html
@@ -16,6 +16,15 @@
     <a id = "MYLEYT" href = "https://youtu.be/R5N45D-blys">
         <button id = "MYLEYT" class = "mc">YT VIdeo</button>
     </a>
+    <a id = "RME" href = "RiRi's Default Edit Final V1.zip">
+        <button id = "RME" class = "mc" href = ""download>RiRi's Default Edit V1</button>
+    </a>
+    <a id = "RMEINFO" href = "">
+        <button id = "RMEINFO" class = "mc">Resource Pack</button>
+    </a>
+    <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
+        <button id = "RMEYT" class = "mc">YT VIdeo</button>
+    </a>
     
 </body>
 </html>
