--- a/changelog.html
+++ b/changelog.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type = "text/css" href = "changelog.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type = "text/css" href = "csharp.css">
-    <title>C# Stuff</title>
+    <title>Changelog</title>
 </head>
 <body>
-    <a href = "timer.exe.zip" download>
-        <button id = "timerexe" class = "csharp">Timer.exe</button>
-    </a>
-    <a id = "jaryt" href = "">
-        <button id = "timerexeyt" class = "csharp">YT Video</button>
-    </a>
-
+    <h1 id = "sepeighttwenty">9/8/2020: 12:00 PM EST</h1>
+    <p id = "p2">New Section: Changelog Added</p>
+    
     <div class="box">
         <div>
     </div>
@@ -36,9 +32,6 @@
     <div>
     </div>
     </div>
-   
-    
-
 
 </body>
 </html>
