--- a/Nepali-Minecraft/MC.html
+++ b/Nepali-Minecraft/MC.html
@@ -20,7 +20,7 @@
         <button id = "RME" class = "mc" href = ""download>रीरीको पूर्वनिर्धारित सम्पादन</button>
     </a>
     <a id = "RMEINFO" href = "">
-        <button id = "RMEINFO" class = "mc">संसाधन प्याक</button>
+        <button id = "RMEINFO" class = "mc">बनावटप्याक</button>
     </a>
     <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
         <button id = "RMEYT" class = "mc">यूट्यूब भिडियो</button>
