--- a/English-Minecraft/MC.html
+++ b/English-Minecraft/MC.html
@@ -7,7 +7,7 @@
     <title>Minecraft Stuff</title>
 </head>
 <body>
-    <a id = "MYLE" href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\MakeYourLifeEasier.zip">
+    <a id = "MYLE" href = "MakeYourLifeEasier.zip">
         <button id = "MYLE" class = "mc" download>Make Your Life Easier V1</button>
     </a>
     <a id = "MYLEINFO" href = "">
@@ -16,7 +16,7 @@
     <a id = "MYLEYT" href = "https://youtu.be/R5N45D-blys">
         <button id = "MYLEYT" class = "mc">YT VIdeo</button>
     </a>
-    <a id = "RME" href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\RiRi's Default Edit Final V1.zip">
+    <a id = "RME" href = "RiRi's Default Edit Final V1.zip">
         <button id = "RME" class = "mc" href = ""download>RiRi's Default Edit V1</button>
     </a>
     <a id = "RMEINFO" href = "">
