--- a/Nepali-C/csharp.html
+++ b/Nepali-C/csharp.html
@@ -7,7 +7,7 @@
     <title>C# सामान</title>
 </head>
 <body>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\timer.exe.zip" download>
+    <a href = "timer.exe.zip" download>
         <button id = "timerexe" class = "csharp">टाइमर</button>
     </a>
     <a id = "jaryt" href = "">
