--- a/English-Java/Java.html
+++ b/English-Java/Java.html
@@ -7,13 +7,13 @@
     <title>Java Stuff</title>
 </head>
 <body>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\jarfilecode.TXT" id = "jar" >
+    <a href = "jarfilecode.TXT" id = "jar" >
         <button id = "jar" class = "java">Jar File Code</button>
     </a>
     <a id = "jaryt" href = "https://www.youtube.com/watch?v=KkiVfNfdM2M&t=11s">
         <button id = "jaryt" class = "java">YT Video</button>
     </a>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\DeletefileV2.jar" id = "delfilejar">
+    <a href = "DeletefileV2.jar" id = "delfilejar">
         <button id = "jar" class = "java">Deletefile</button>
     </a>
     <a id = "delfilejaryt" href = "https://www.youtube.com/watch?v=Ll6sr40DW3Y&t=17s">
