--- a/Slovak-C/csharp.html
+++ b/Slovak-C/csharp.html
@@ -7,11 +7,11 @@
     <title>C# Veci</title>
 </head>
 <body>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\timer.exe.zip" download>
-        <button id = "timerexe" class = "csharp">Timer.exe</button>
+    <a href = "timer.exe.zip" download>
+        <button id = "timerexe" class = "csharp">Časovač</button>
     </a>
     <a id = "jaryt" href = "">
-        <button id = "timerexeyt" class = "csharp">YT Video</button>
+        <button id = "timerexeyt" class = "csharp">Tytrubica</button>
     </a>
 
     <div class="box">
