--- a/Slovak-Nanomic/Nanomic.html
+++ b/Slovak-Nanomic/Nanomic.html
@@ -12,7 +12,7 @@
     
     <div class="middle">
         </a>
-        <a class="btn" href="C:\Users\hridu\Documents\HTML Projects\Public Website\Europe\Slovakian\Nanomic\todo.html">
+        <a class="btn" href="todo.html">
             <i class="fas fa-sticky-note"></i>
         </a>
         
