--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p id="nepalitext">Nepali</p>
         <p id="nepalittext">नेपाली</p>
     </a>
-    <a id = "Slovak" href="Slovak-Home/index.html">
+    <a id = "Slovak" href="slovak-index.html">
         <p id="slovaktext">Slovak</p>
         <p id="slovakttext">Slovák</p>
     </a>
