--- a/slovak-index.html
+++ b/slovak-index.html
@@ -28,17 +28,17 @@
 
     <div class="middle">
         
-        <a class="btn" href="C:\Users\hridu\Documents\HTML Projects\Public Website\Europe\Slovakian\Minecraft\MC.html">
+        <a class="btn" href="Slovak-Minecraft/MC.html">
           <i class="fas fa-cubes"></i>
         </a>
         
-        <a class="btn" href="C:\Users\hridu\Documents\HTML Projects\Public Website\Europe\Slovakian\Java\Java.html">
+        <a class="btn" href="Slovak-Java/Java.html">
             <i class="fab fa-java"></i>
         </a>
-        <a class="btn" href="C:\Users\hridu\Documents\HTML Projects\Public Website\Europe\Slovakian\C\csharp.html">
+        <a class="btn" href="Slovak-C/csharp.html">
             <i class="fab fa-cuttlefish"></i>
         </a>
-        <a class="btn" href="C:\Users\hridu\Documents\HTML Projects\Public Website\Europe\Slovakian\Nanomic\Nanomic.html">
+        <a class="btn" href="Slovak-Nanomic/Nanomic.html">
             <i class="fas fa-vial"></i>
         </a>
       </div>
