--- a/Slovak-Java/Java.html
+++ b/Slovak-Java/Java.html
@@ -7,17 +7,17 @@
     <title>Java Veci</title>
 </head>
 <body>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\jarfilecode.TXT" id = "jar" >
-        <button id = "jar" class = "java">Jar File Code</button>
+    <a href = "jarfilecode.TXT" id = "jar" >
+        <button id = "jar" class = "java">Kód súboru Jar</button>
     </a>
     <a id = "jaryt" href = "https://www.youtube.com/watch?v=KkiVfNfdM2M&t=11s">
-        <button id = "jaryt" class = "java">YT Video</button>
+        <button id = "jaryt" class = "java">TyTrubica Video</button>
     </a>
-    <a href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\DeletefileV2.jar" id = "delfilejar">
-        <button id = "jar" class = "java">Deletefile</button>
+    <a href = "DeletefileV2.jar" id = "delfilejar">
+        <button id = "jar" class = "java">Zmazať súbor</button>
     </a>
     <a id = "delfilejaryt" href = "https://www.youtube.com/watch?v=Ll6sr40DW3Y&t=17s">
-        <button id = "jaryt" class = "java">YT Video</button>
+        <button id = "jaryt" class = "java">TyTrubica</button>
     </a>
 
     <div class="box">
