--- a/Slovak-Minecraft/MC.html
+++ b/Slovak-Minecraft/MC.html
@@ -7,23 +7,23 @@
     <title>Minecraft Veci</title>
 </head>
 <body>
-    <a id = "MYLE" href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\MakeYourLifeEasier.zip">
+    <a id = "MYLE" href = "MakeYourLifeEasier.zip">
         <button id = "MYLE" class = "mc" download>Uľahčite si život</button>
     </a>
     <a id = "MYLEINFO" href = "">
         <button id = "MYLEINFO" class = "mc">Údajebatoh</button>
     </a>
     <a id = "MYLEYT" href = "https://youtu.be/R5N45D-blys">
-        <button id = "MYLEYT" class = "mc">tytrubica video</button>
+        <button id = "MYLEYT" class = "mc">tytrubica</button>
     </a>
-    <a id = "RME" href = "C:\Users\hridu\Documents\HTML Projects\Public Website\English\Downloads\RiRi's Default Edit Final V1.zip">
+    <a id = "RME" href = "RiRi's Default Edit Final V1.zip">
         <button id = "RME" class = "mc" href = ""download>RiRis Predvolená úprava</button>
     </a>
     <a id = "RMEINFO" href = "">
         <button id = "RMEINFO" class = "mc">Textúrabatoh</button>
     </a>
     <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
-        <button id = "RMEYT" class = "mc">tytrubica video</button>
+        <button id = "RMEYT" class = "mc">tytrubica </button>
     </a>
 
     <div class="box">
