--- a/Slovak-Nanomic/todo.html
+++ b/Slovak-Nanomic/todo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel = "stylesheet" href = "main.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nanomic Todo</title>
+    <title>Nanomic Robiť</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700,900&display=swap"
       rel="stylesheet"
@@ -15,10 +15,10 @@
   </head>
 
   <body>
-    <h1 class="title">Nanomic To-Do</h1>
+    <h1 class="title">Nanomic Robiť</h1>
 
     <div class="all-tasks">
-      <h2 class="task-list-title">My lists</h2>
+      <h2 class="task-list-title">Moje zoznamy</h2>
       <ul class="task-list" data-lists></ul>
 
       <form action="" data-new-list-form>
@@ -26,8 +26,8 @@
           type="text"
           class="new list"
           data-new-list-input
-          placeholder="new list name"
-          aria-label="new list name"
+          placeholder="Nový názov zoznamu"
+          aria-label="Nový názov zoznamu"
         />
         <button class="btn create" aria-label="create new list">+</button>
       </form>
@@ -35,7 +35,7 @@
 
     <div class="todo-list" data-list-display-container>
       <div class="todo-header">
-        <h2 class="list-title" data-list-title>Sample List</h2>
+        <h2 class="list-title" data-list-title>Ukážkový zoznam</h2>
         <p class="task-count" data-list-count></p>
       </div>
 
@@ -48,16 +48,16 @@
                   type="text"
                   data-new-task-input
                   class="new task"
-                  placeholder="new task name"
-                  aria-label="new task name"
+                  placeholder="Nový názov úlohy"
+                  aria-label="Nový názov úlohy"
                 />
                 <button class="btn create" aria-label="create new task">+</button>
               </form>
         </div>
 
         <div class="delete-stuff">
-          <button class="btn delete" data-clear-complete-tasks-button>Clear completed tasks</button>
-          <button class="btn delete" data-delete-list-button>Delete list</button>
+          <button class="btn delete" data-clear-complete-tasks-button>Vymazať splnené úlohy</button>
+          <button class="btn delete" data-delete-list-button>Odstrániť zoznam</button>
         </div>
       </div>
     </div>
