--- a/Nepali-Minecraft/MC.html
+++ b/Nepali-Minecraft/MC.html
@@ -25,6 +25,15 @@
     <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
         <button id = "RMEYT" class = "mc">यूट्यूब भिडियो</button>
     </a>
+    <a id = "SCP" href = "rirustshortcmds.jar">
+        <button id = "SCP" class = "mc" href = ""download>छोटो कमाण्डहरु V1</button>
+    </a>
+    <a id = "SCPINFO" href = "">
+        <button id = "RMEINFO" class = "mc">स्पिगट प्लगइन</button>
+    </a>
+    <a id = "SCPYT" href = "https://youtu.be/cCm6LrSBT7s">
+        <button id = "RMEYT" class = "mc">यूट्यूब भिडियो</button>
+    </a>
 
     <div class="box">
         <div>
