--- a/Slovak-Minecraft/MC.html
+++ b/Slovak-Minecraft/MC.html
@@ -25,6 +25,15 @@
     <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
         <button id = "RMEYT" class = "mc">tytrubica </button>
     </a>
+    <a id = "SCP" href = "rirustshortcmds.jar">
+        <button id = "SCP" class = "mc" href = ""download>Krátke príkazy V1</button>
+    </a>
+    <a id = "SCPINFO" href = "">
+        <button id = "RMEINFO" class = "mc">Doplnok na hrdlo</button>
+    </a>
+    <a id = "SCPYT" href = "https://youtu.be/cCm6LrSBT7s">
+        <button id = "RMEYT" class = "mc">tytrubica</button>
+    </a>
 
     <div class="box">
         <div>
