--- a/English-Minecraft/MC.html
+++ b/English-Minecraft/MC.html
@@ -25,6 +25,15 @@
     <a id = "RMEYT" href = "https://youtu.be/qQqbH8K8HmY">
         <button id = "RMEYT" class = "mc">YT VIdeo</button>
     </a>
+    <a id = "SCP" href = "rirustshortcmds.jar">
+        <button id = "RME" class = "mc" href = ""download>Short Command Plugin</button>
+    </a>
+    <a id = "SCPINFO" href = "">
+        <button id = "RMEINFO" class = "mc">Spigot Plugin</button>
+    </a>
+    <a id = "SCPYT" href = "https://www.youtube.com/watch?v=cCm6LrSBT7s">
+        <button id = "RMEYT" class = "mc">YT VIdeo</button>
+    </a>
 
     <div class="box">
         <div>
