--- a/MC.html
+++ b/MC.html
@@ -35,6 +35,16 @@
         <button id = "RMEYT" class = "mc">YT VIdeo</button>
     </a>
     
+    <a id = "RDE" href = "RiRi's Defualt Edit V2.zip">
+        <button id = "RDE" class = "mc" href = ""download>RiRi's Default Edit V2</button>
+    </a>
+    <a id = "RDEINFO" href = "">
+        <button id = "RDEINFO" class = "mc">Resource Pack</button>
+    </a>
+    <a id = "RDEYT" href = "https://youtu.be/cCm6LrSBT7s">
+        <button id = "RDEYT" class = "mc">YT VIdeo</button>
+    </a>
+    
 
     <div class="box">
         <div>
