--- a/MC.html
+++ b/MC.html
@@ -41,7 +41,7 @@
     <a id = "RDEINFO" href = "">
         <button id = "RDEINFO" class = "mc">Resource Pack</button>
     </a>
-    <a id = "RDEYT" href = "https://youtu.be/cCm6LrSBT7s">
+    <a id = "RDEYT" href = "https://www.youtube.com/watch?v=i8WsZlsB35g&t=5s">
         <button id = "RDEYT" class = "mc">YT VIdeo</button>
     </a>
     
