--- a/MC.html
+++ b/MC.html
@@ -35,8 +35,8 @@
         <button id = "RMEYT" class = "mc">YT VIdeo</button>
     </a>
     
-    <a id = "RDE" href = "RiRi's Defualt Edit V2.zip">
-        <button id = "RDE" class = "mc" href = ""download>RiRi's Default Edit V2</button>
+    <a id = "RDE" href = "RiRis Default Edits Texture Pack.html">
+        <button id = "RDE" class = "mc" href = "">RiRi's Default Edit V2</button>
     </a>
     <a id = "RDEINFO" href = "">
         <button id = "RDEINFO" class = "mc">Resource Pack</button>
