--- a/UsefulCraftingRecipies.html
+++ b/UsefulCraftingRecipies.html
@@ -20,6 +20,11 @@
     <ul id = "nether-wart">Nether Wart</ul>
     <ul id = "totem">Totem Of Undying</ul>
     <ul id = "bell">Bell</ul>
+    <ul id = "ch">Chainmail Helmet</ul>
+    <ul id = "cc">Chainmail Chestplate</ul>
+    <ul id = "cl">Chainmail Leggings</ul>
+    <ul id = "cb">Chainmail Boots</ul>
+
     <h2 id = "credits">Credits</h2>
     <ul id = "java">Java</ul>
     <ul id = "notch">Notch</ul>
@@ -28,7 +33,11 @@
     <ul id = "fabric">Fabric</ul>
     <ul id = "ririthenerd">RiRiTheNerd (Me)</ul>
     <h2 id = "downloads"></h2>
-    <a id = "forge-download" href="Usefulcraftingrecipes.jar">Forge Download Link</a>
+    <a id = "warningforge" >(Latest Version Of The Mod)</a>
+    <a id = "warningfabric" >(Latest Version Of The Mod)</a>
+    <a id = "warningcurseforge" >(All Versions Of The Mod)</a>
+
+   <a id = "forge-download" href="Usefulcraftingrecipes.jar">Forge Download Link</a>
     <a id = "fabric-download" href="UsefulCraftingRecipesFabric.jar">Fabric Download Link</a>
     <a id = "curseforge-download" href="https://www.curseforge.com/minecraft/mc-mods/useful-crafting-recipes">Curseforge Download Link</a>
     <h2 id = "contact">Contact</h2>
@@ -51,6 +60,12 @@
             document.getElementById("nether-wart").style.color = "gray";
             document.getElementById("totem").style.color = "gray";
             document.getElementById("bell").style.color = "gray";
+            document.getElementById("ch").style.color = "gray";
+            document.getElementById("cc").style.color = "gray";
+            document.getElementById("cl").style.color = "gray";
+            document.getElementById("cb").style.color = "gray";
+
+
             document.getElementById("credits").style.color = "gray";
             document.getElementById("java").style.color = "gray";
             document.getElementById("notch").style.color = "gray";
@@ -67,6 +82,9 @@
             document.getElementById("forgeimg").style.color = "gray";
             document.getElementById("fabricimg").style.color = "gray";
             document.getElementById("curseforgeimg").style.color = "gray";
+            document.getElementById("warningforge").style.color = "gray";
+            document.getElementById("warningfabric").style.color = "gray";
+            document.getElementById("warningcurseforge").style.color = "gray";
 
             const body = document.querySelector('body');
             const toggle = document.getElementById('toggle');
