--- a/UsefulCraftingRecipies.html
+++ b/UsefulCraftingRecipies.html
@@ -37,8 +37,8 @@
     <a id = "warningfabric" >(Latest Version Of The Mod)</a>
     <a id = "warningcurseforge" >(All Versions Of The Mod)</a>
 
-   <a id = "forge-download" href="Usefulcraftingrecipes.jar">Forge Download Link</a>
-    <a id = "fabric-download" href="UsefulCraftingRecipesFabric.jar">Fabric Download Link</a>
+   <a id = "forge-download" href="UsefulcraftingrecipesV2.jar">Forge Download Link</a>
+    <a id = "fabric-download" href="UsefulcraftingrecipesFabricV2.jar">Fabric Download Link</a>
     <a id = "curseforge-download" href="https://www.curseforge.com/minecraft/mc-mods/useful-crafting-recipes">Curseforge Download Link</a>
     <h2 id = "contact">Contact</h2>
     <ul id = "discord">Discord: RiRiTheNerd#8952</ul>
